--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "servers": "npx concurrently \"npm run dev\" \"npx nodemon server.cjs\""
+    "servers": "npm concurrently \"npm run dev\" \"npm nodemon server.cjs\""
   },
   "dependencies": {
     "axios": "^1.5.1",
