--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,11 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
+
 
 # Editor directories and files
 .vscode/*
+.env
 !.vscode/extensions.json
 .idea
 .DS_Store
@@ -22,4 +23,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-*.env
